--- a/type-chain/package.json
+++ b/type-chain/package.json
@@ -13,5 +13,8 @@
     "ts-node": "^10.0.0",
     "tsc-watch": "^4.4.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0"
   }
 }
