--- a/timer-extension/manifest.json
+++ b/timer-extension/manifest.json
@@ -18,7 +18,7 @@
     "default_popup": "popup.html"
   },
   "options_page": "options.html",
-  "permissions": ["storage"],
+  "permissions": ["storage", "alarms", "notifications"],
   "background": {
     "service_worker": "background.js"
   }
