--- a/01-ts-react/package.json
+++ b/01-ts-react/package.json
@@ -2,18 +2,25 @@
   "name": "01-ts-react-webpack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "tsc-watch --onSuccess \" node dist/\" "
+    "start": "webpack --watch --progress --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^16.11.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.4.0",
+    "html-webpack-plugin": "^5.4.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "style-loader": "^3.3.0",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.3.0",
     "tsc-watch": "^4.5.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.0"
   }
 }
