--- a/02-weather-api/package.json
+++ b/02-weather-api/package.json
@@ -10,6 +10,7 @@
   "author": "Liha Kim",
   "license": "MIT",
   "devDependencies": {
+    "@fontsource/roboto": "^4.5.1",
     "@types/chrome": "^0.0.159",
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.0",
@@ -17,6 +18,8 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
+    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,5 +32,10 @@
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.4"
   }
 }
